# libcoda

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile.root  LICENSE.md  Makefile.am  Makefile.in  NEWS  README.md  arg3.make  arg3.pc  arg3.pc.in  arg3.rb  arg3.sublime-project  arg3.sublime-workspace  arg3.test.cpp  bootstrap  bootstrap.sh  brew_configure  brew_install  config.h.in  configure  configure.ac  cpppm.conf  docker-compose.yml  package.json  prebuild.sh  premake4.lua  reinstall.sh  update_dependencies.sh
arg3/: Makefile.am  Makefile.in
arg3/collections/: Makefile.am  collections.h
arg3/log/: log.cpp  premake4.lua
arg3/math/: Makefile.in  README.md  bigint.cpp
arg3/string/: Makefile.in  string.cpp  string.h
arg3/terminal/: Makefile.am  Makefile.in  base_terminal.h  vt100.cpp  vt100.h
collections/: README.md  collections.cpp  collections.h  collections.test.cpp  premake4.lua
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/collections/: collections.h.func-sort-c.html  collections.h.func.html  collections.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/db/src/: base_query.cpp.func-sort-c.html  base_query.cpp.func.html  base_query.cpp.gcov.html  base_query.h.func-sort-c.html  base_query.h.func.html  base_query.h.gcov.html  bindable.h.func-sort-c.html  bindable.h.func.html  bindable.h.gcov.html  column.cpp.func-sort-c.html  column.cpp.func.html  column.cpp.gcov.html  column.h.func-sort-c.html  column.h.func.html  column.h.gcov.html  delete_query.cpp.func-sort-c.html  delete_query.cpp.func.html  delete_query.cpp.gcov.html  exception.h.func-sort-c.html  exception.h.func.html  exception.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  modify_query.cpp.func-sort-c.html  modify_query.cpp.func.html  modify_query.cpp.gcov.html  mysql_binding.cpp.func-sort-c.html  mysql_binding.cpp.func.html  mysql_binding.cpp.gcov.html  mysql_column.cpp.func-sort-c.html  mysql_column.cpp.func.html  mysql_column.cpp.gcov.html  (+87 more)
coverage/log/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  log.cpp.func-sort-c.html  log.cpp.func.html  log.cpp.gcov.html  log.h.func-sort-c.html  log.h.func.html  log.h.gcov.html
coverage/math/: bigint.cpp.func-sort-c.html  bigint.cpp.func.html  bigint.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  math_util.h.func-sort-c.html  math_util.h.func.html  math_util.h.gcov.html
coverage/string/: argument.cpp.func-sort-c.html  argument.cpp.func.html  argument.cpp.gcov.html  buffer.cpp.func-sort-c.html  buffer.cpp.func.html  buffer.cpp.gcov.html  buffer.h.func-sort-c.html  buffer.h.func.html  buffer.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  str_util.cpp.func-sort-c.html  str_util.cpp.func.html  str_util.cpp.gcov.html  util.cpp.func-sort-c.html  util.cpp.func.html  util.cpp.gcov.html
coverage/terminal/: base_terminal.h.func-sort-c.html  base_terminal.h.func.html  base_terminal.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  vt100.h.func-sort-c.html  vt100.h.func.html  vt100.h.gcov.html
db/: base_record.h  base_record.test.cpp  db.test.h
dice/: dice.cpp  dice.h  dice.test.cpp  dice.test.h  dice_game.cpp  dice_game.h  premake4.lua
dice-engine/: README.md  dice.h  dice_game.cpp  premake4.lua
dice-engine/yacht/: engine.cpp  engine.test.cpp  player.h  scoresheet.cpp  scoresheet.h
dice/yacht/: constants.h  engine.cpp  engine.h  player.cpp  player.h  player.test.cpp  scoresheet.cpp  scoresheet.h  scoresheet.test.cpp
homebrew/: arg3.rb  arg3json.rb  libarg3.rb  libarg3json.rb  libcoda.rb
json/: README.md  array.cpp  array.h  array.test.cpp  array_iterator.cpp  array_iterator.h  exception.h  json.h  object.cpp  object.h  object.test.cpp  object_iterator.cpp  object_iterator.h  premake4.lua
log/: log.cpp  log.h  log.test.cpp
math/: bigint.cpp  bigint.h  bigint.test.cpp  util.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  arg3.cpp  config.h.in  version.cpp
src/collections/: Makefile.in  README.md  collections.h
src/json/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/json/src/: CMakeLists.txt  array.cpp  array.h  array_iterator.cpp  array_iterator.h  exception.h  json.h  object.cpp  object.h  object_iterator.cpp  object_iterator.h
src/json/tests/: CMakeLists.txt  array.test.cpp  object.test.cpp  object.test.json
src/log/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  log.cpp  log.h
src/math/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  bigint.cpp  bigint.h  premake4.lua  util.h
src/string/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  argument.cpp  argument.h  buffer.cpp  buffer.h  buffered_io.cpp  str_util.cpp  str_util.h  string.cpp  util.cpp  util.h
src/terminal/: CMakeLists.txt  Makefile.am  Makefile.in  base_terminal.h  color.cpp  color.h  cursor.cpp  cursor.h  output.cpp  output.h  progress.cpp  progress.h  vt100.cpp  vt100.h
src/thread/: CMakeLists.txt  later.h
src/utility/: CMakeLists.txt  README.md  collections.h
src/variant/: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  suppression.map
src/variant/src/: CMakeLists.txt  binary.cpp  binary.h  variant.cpp  variant.h
src/variant/tests/: CMakeLists.txt  binary.test.cpp  variant.test.cpp
string/: README.md  argument.cpp  argument.h  argument.test.cpp  premake4.lua  string.cpp  string.h  string.test.cpp
strings/: README.md  premake4.lua  strings.cpp  strings.h  strings.test.cpp
tests/: CMakeLists.txt  Makefile.am  Makefile.in  arg3.test.cpp  argument.test.cpp  bigint.test.cpp  buffer.test.cpp  collections.test.cpp  log.test.cpp  main.test.cpp  string.test.cpp  terminal.test.cpp
variant/: .gitignore  README.md  premake4.lua  variant.cpp  variant.h  variant.test.cpp  variant_alt.h  variant_alt2.h
(+150 files in other folders)
