set(MATH_LIBRARY coda_math)

add_library(${MATH_LIBRARY} bigint.cpp util.h)

string(REPLACE "_" "/" INSTALL_DIRECTORY ${MATH_LIBRARY})

install(FILES bigint.h util.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${INSTALL_DIRECTORY})

install(TARGETS ${MATH_LIBRARY} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

create_package(TARGET ${MATH_LIBRARY} VERSION 0.1.0 DESCRIPTION "Math utils")
