
set(${PROJECT_NAME}_HEADERS binary.h variant.h)

add_library(${PROJECT_NAME} ${${PROJECT_NAME}_HEADERS} variant.cpp binary.cpp)

string(REPLACE "_" "/" INSTALL_DIRECTORY ${PROJECT_NAME})

install(FILES ${${PROJECT_NAME}_HEADERS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/${CMAKE_ROOT_PROJECT}")

install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
